1.6.0 2024xxxx
CR: Content: Added snake.html as example and little gimmick
CR: Service: Omission of the HTTP method TOUCH
    Because it is not an official HTTP standard.
CR: Service: Change from status code to 304 when creating
    If an existing storage is opened with CONNECT or PUT without XPath, server
    status 304 is now returned instead of the previous server status 204.

1.5.1 20241030
BF: Service: Correction of the configuration for on-premises
    The Apache environment variable was not read correctly.
BF: Build: Correction of the version number distribution
    Dockerfile was forgotten.
CR: Build: Added build and publish the Docker images

1.5.0 20241027
BF: Build: Review and optimization
CR: Service: Optimization of the configuration via environment variables
    Simplifies the provision as a container.
    - XMEX_URI_XPATH_DELIMITER: XPath delimiter in the URI (!)
    - XMEX_STORAGE_DIRECTORY: Directory of the data storage (./data)
    - XMEX_STORAGE_QUANTITY: Maximum number of files in data storage (65535)
    - XMEX_STORAGE_SPACE: Maximum data size of files in data storage in bytes (256 *1024)
    - XMEX_STORAGE_EXPIRATION: Maximum idle time of the files in seconds (15 *60)
    - XMEX_STORAGE_REVISION_TYPE: Basis of the revision number (timestamp)
    - XMEX_DEBUG_MODE: Activates debug mode for unit tests (off)
    - XMEX_CONTAINER_MODE: Activates debug mode for unit tests (off)
CR: Request: Configurable XPath delimiter of the URI
    XPath delimiter for the URI is not automatically the first symbol.
    The uniform standard is the exclamation mark !
CR: Request: Omission of XPath via query string
    The XPath includes the query string as part of the path.
CR: Request: Uniform identifier question mark for Base64 and hex encoded paths
    old: /xmex!Base64:Ly9ib29rW2xhc3QoKV0vY2hhcHRlcltsYXN0KCld
    new: /xmex!?Ly9ib29rW2xhc3QoKV0vY2hhcHRlcltsYXN0KCld
    old: /xmex!0x282f626f6f6b73292f2f6c6173743a3a6265666f7265